crates/solidity-v2/testing/snapshots/diagnostics_output/structure/unimplemented_function_with_modifiers/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[SyntaxError 2668] Error: Functions without implementation cannot have modifiers.
    ╭─[input.sol:10:5]
    │
 10 │     function foo() public virtual onlyOwner;
    │     ────────────────────┬───────────────────  
    │                         ╰───────────────────── Error occurred here.
────╯

[SyntaxError 2668] Error: Functions without implementation cannot have modifiers.
    ╭─[input.sol:11:5]
    │
 11 │     function bar() public onlyOwner virtual;
    │     ────────────────────┬───────────────────  
    │                         ╰───────────────────── Error occurred here.
────╯
